tests/outref/TUC000.ref
OCTO> select notathing as a from names;
[ERROR] PATH:LINENUM DATE TIME : Unknown column: NOTATHING
Error with syntax near (line 1, column 7):

select notathing as a from names;
       ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select notathing as a from names;

OCTO> select * from names limit 1;
0|Zero|Cool
OCTO> 
